--- a/w/wh/who/wholesalesolar.com.html
+++ b/w/wh/who/wholesalesolar.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the wholesalesolar.com privacy policy that was archived on 2001-12-01.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011201165258id_/http%3A//myhosting.com/privacypolicy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the wholesalesolar.com privacy policy that was archived on 2002-06-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020604072404id_/http%3A//myhosting.com/privacypolicy.htm) for the most accurate reproduction.-->
 
 <html><!-- #BeginTemplate "/Templates/template_aboutus.dwt" --><head>
 <!-- #BeginEditable "doctitle" --> 
@@ -45,7 +45,7 @@ function MM_swapImage() { //v3.0
       <table width="740" border="0" cellspacing="0" cellpadding="0">
         <tbody><tr> 
           <td width="297" height="75"> 
-            <div align="left">&nbsp;&nbsp;<a href="index.htm"><img src="http://a1176.g.akamai.net/7/1176/5697/v001/myhosting.com/images/logo.gif" width="201" height="62" border="0" alt="Back to Home page"></a></div>
+            <div align="left">&nbsp;&nbsp;<a href="index.htm"><img src="http://a1176.g.akamai.net/7/1176/5697/v005/myhosting.com/images/logo.gif" width="201" height="62" border="0" alt="Back to Home page"></a></div>
           </td>
           <td width="443"> 
             <div align="right"><a name="top"></a> 
@@ -62,9 +62,9 @@ function MM_swapImage() { //v3.0
                 </tr>
                 <tr> 
                   <td width="64%"> 
-                    <div align="center"><a href="https://support.myhosting.com/" onmouseout="MM_swapImgRestore()" onmousedown="MM_swapImage('Image8','','images/login2a.gif',1)" target="_blank"><img src="http://a1176.g.akamai.net/7/1176/5697/v001/myhosting.com/images/login1a.gif" width="104" height="23" border="0" name="Image8"></a></div>
+                    <div align="center"><a href="https://support.myhosting.com/" onmouseout="MM_swapImgRestore()" onmousedown="MM_swapImage('Image8','','images/login2a.gif',1)" target="_blank"><img src="http://a1176.g.akamai.net/7/1176/5697/v005/myhosting.com/images/login1a.gif" width="104" height="23" border="0" name="Image8"></a></div>
                   </td>
-                  <td width="36%"><a href="http://www.mail2web.com/" target="_blank"><img src="http://a1176.g.akamai.net/7/1176/5697/v001/myhosting.com/images/mail2web_logo_top.gif" width="95" height="30" border="0" alt="Check your mail at mail2web.com"></a></td>
+                  <td width="36%"><a href="http://www.mail2web.com/" target="_blank"><img src="http://a1176.g.akamai.net/7/1176/5697/v005/myhosting.com/images/mail2web_logo_top.gif" width="95" height="30" border="0" alt="Check your mail at mail2web.com"></a></td>
                 </tr>
               </tbody></table>
             </div>
@@ -78,13 +78,13 @@ function MM_swapImage() { //v3.0
       <form name="formSearch" method="post" action="cgi-bin/search.asp">
         <table width="740" border="0" cellspacing="0" cellpadding="0" height="24" bgcolor="#999999">
           <tbody><tr> 
-            <td width="482" bgcolor="#999999"><img src="http://a1176.g.akamai.net/7/1176/5697/v001/myhosting.com/images/menu/menu_left.gif" width="15" height="24"><a href="plans.htm" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image2','','images/menu/packages2.gif',1)"><img src="http://a1176.g.akamai.net/7/1176/5697/v001/myhosting.com/images/menu/packages1.gif" width="74" height="22" border="0" name="Image2"></a><a href="support.htm" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image3','','images/menu/support2.gif',1)"><img src="http://a1176.g.akamai.net/7/1176/5697/v001/myhosting.com/images/menu/support1.gif" width="70" height="22" border="0" name="Image3"></a><a href="resellers.htm" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image5','','images/menu/resellers2.gif',1)"><img src="http://a1176.g.akamai.net/7/1176/5697/v001/myhosting.com/images/menu/resellers1.gif" width="72" height="22" border="0" name="Image5"></a><img src="http://a1176.g.akamai.net/7/1176/5697/v001/myhosting.com/images/menu/about2.gif" width="58" height="22" border="0" name="Image1"><a href="cgi-bin/contact.asp" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image6','','images/menu/contact2.gif',1)"><img src="http://a1176.g.akamai.net/7/1176/5697/v001/myhosting.com/images/menu/contact1.gif" width="70" height="22" border="0" name="Image6"></a><a href="sitemap.htm" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image7','','images/menu/sitemap2.gif',1)"><img src="http://a1176.g.akamai.net/7/1176/5697/v001/myhosting.com/images/menu/sitemap1.gif" width="68" height="22" border="0" name="Image7"></a><img src="http://a1176.g.akamai.net/7/1176/5697/v001/myhosting.com/images/menu/search.gif" width="55" height="22"></td>
+            <td width="482" bgcolor="#999999"><img src="http://a1176.g.akamai.net/7/1176/5697/v005/myhosting.com/images/menu/menu_left.gif" width="15" height="24"><a href="plans.htm" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image2','','images/menu/packages2.gif',1)"><img src="http://a1176.g.akamai.net/7/1176/5697/v005/myhosting.com/images/menu/packages1.gif" width="74" height="22" border="0" name="Image2"></a><a href="support.htm" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image3','','images/menu/support2.gif',1)"><img src="http://a1176.g.akamai.net/7/1176/5697/v005/myhosting.com/images/menu/support1.gif" width="70" height="22" border="0" name="Image3"></a><a href="resellers.htm" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image5','','images/menu/resellers2.gif',1)"><img src="http://a1176.g.akamai.net/7/1176/5697/v005/myhosting.com/images/menu/resellers1.gif" width="72" height="22" border="0" name="Image5"></a><img src="http://a1176.g.akamai.net/7/1176/5697/v005/myhosting.com/images/menu/about2.gif" width="58" height="22" border="0" name="Image1"><a href="cgi-bin/contact.asp" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image6','','images/menu/contact2.gif',1)"><img src="http://a1176.g.akamai.net/7/1176/5697/v005/myhosting.com/images/menu/contact1.gif" width="70" height="22" border="0" name="Image6"></a><a href="sitemap.htm" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image7','','images/menu/sitemap2.gif',1)"><img src="http://a1176.g.akamai.net/7/1176/5697/v005/myhosting.com/images/menu/sitemap1.gif" width="68" height="22" border="0" name="Image7"></a><img src="http://a1176.g.akamai.net/7/1176/5697/v005/myhosting.com/images/menu/search.gif" width="55" height="22"></td>
             <td bgcolor="#999999" valign="middle" width="154" height="24"> 
               <input type="text" name="search" style="font-type: arial; font-size: 8pt" size="12" maxlength="100">
-              <input type="image" border="0" name="Submit" src="http://a1176.g.akamai.net/7/1176/5697/v001/myhosting.com/images/menu/go.gif" align="absmiddle" width="27" height="19" alt="Search">
+              <input type="image" border="0" name="Submit" src="http://a1176.g.akamai.net/7/1176/5697/v005/myhosting.com/images/menu/go.gif" align="absmiddle" width="27" height="19" alt="Search">
             </td>
             <td width="104"> 
-              <div align="right"><a href="signup/step1.asp"><img src="http://a1176.g.akamai.net/7/1176/5697/v001/myhosting.com/images/menu/signup_anim.gif" width="84" height="22" border="0" alt="Sign up for hosting services"></a><img src="http://a1176.g.akamai.net/7/1176/5697/v001/myhosting.com/images/menu/menu_right.gif" width="20" height="24"></div>
+              <div align="right"><a href="signup/step1.asp"><img src="http://a1176.g.akamai.net/7/1176/5697/v005/myhosting.com/images/menu/signup_anim.gif" width="84" height="22" border="0" alt="Sign up for hosting services"></a><img src="http://a1176.g.akamai.net/7/1176/5697/v005/myhosting.com/images/menu/menu_right.gif" width="20" height="24"></div>
             </td>
           </tr>
         </tbody></table>
@@ -105,17 +105,17 @@ function MM_swapImage() { //v3.0
                         <form name="formDomainCheck" method="post" action="cgi-bin/checkdomain.asp">
                           <table width="188" border="0" cellspacing="0" cellpadding="0">
                             <tbody><tr width="188"> 
-                              <td valign="top" background="http://a1176.g.akamai.net/7/1176/5697/v001/myhosting.com/images/bg_leftmenu.gif"><img src="http://a1176.g.akamai.net/7/1176/5697/v001/myhosting.com/images/domain.gif" width="188" height="38"></td>
+                              <td valign="top" background="http://a1176.g.akamai.net/7/1176/5697/v005/myhosting.com/images/bg_leftmenu.gif"><img src="http://a1176.g.akamai.net/7/1176/5697/v005/myhosting.com/images/domain.gif" width="188" height="38"></td>
                             </tr>
                             <tr width="188"> 
-                              <td height="30" background="http://a1176.g.akamai.net/7/1176/5697/v001/myhosting.com/images/bg_leftmenu.gif"> 
+                              <td height="30" background="http://a1176.g.akamai.net/7/1176/5697/v005/myhosting.com/images/bg_leftmenu.gif"> 
                                 &nbsp; 
                                 <input type="text" name="domainname" size="10" maxlength="67">
                                 <select name="tld" size="1">
                                   <option selected="">.com</option>
                                   <option>.net</option>
                                   <option>.org</option>
-                                  <option>.ca</option>
+                                  <option>.ca</option><option>.us</option>
                                   <option>.biz</option>
                                   <option>.info</option>
                                   <option>.co.uk</option>
@@ -128,14 +128,14 @@ function MM_swapImage() { //v3.0
                               </td>
                             </tr>
                             <tr width="188"> 
-                              <td background="http://a1176.g.akamai.net/7/1176/5697/v001/myhosting.com/images/bg_leftmenu.gif"> 
-                                 <div align="center"><input type="image" border="0" name="Submit" src="http://a1176.g.akamai.net/7/1176/5697/v001/myhosting.com/images/checkav1.gif" width="133" height="23" alt="Check if this domain name is available">
+                              <td background="http://a1176.g.akamai.net/7/1176/5697/v005/myhosting.com/images/bg_leftmenu.gif"> 
+                                 <div align="center"><input type="image" border="0" name="Submit" src="http://a1176.g.akamai.net/7/1176/5697/v005/myhosting.com/images/checkav1.gif" width="133" height="23" alt="Check if this domain name is available">
                                         <br>
-                                        <input type="image" name="parkdomain" src="http://a1176.g.akamai.net/7/1176/5697/v001/myhosting.com/images/parkdomain.gif" width="133" height="23" border="0" alt="Park your domain now"> </div>
+                                        <input type="image" name="parkdomain" src="http://a1176.g.akamai.net/7/1176/5697/v005/myhosting.com/images/parkdomain.gif" width="133" height="23" border="0" alt="Park your domain now"> </div>
                               </td>
                             </tr>
                             <tr> 
-                              <td valign="top" background="http://a1176.g.akamai.net/7/1176/5697/v001/myhosting.com/images/bg_leftmenu.gif"> 
+                              <td valign="top" background="http://a1176.g.akamai.net/7/1176/5697/v005/myhosting.com/images/bg_leftmenu.gif"> 
                                 <div align="center">
                                   <table border="0" cellspacing="0" width="155">
                                     <tbody><tr> 
@@ -165,13 +165,13 @@ function MM_swapImage() { //v3.0
                                     </tr>
                                     <tr> 
                                       <td width="11" bgcolor="#FFFFFF" height="20"> 
-                                        <div align="right"><img src="http://a1176.g.akamai.net/7/1176/5697/v001/myhosting.com/images/10x10spacer.gif" width="10" height="10"></div>
+                                        <div align="right"><img src="http://a1176.g.akamai.net/7/1176/5697/v005/myhosting.com/images/10x10spacer.gif" width="10" height="10"></div>
                                       </td>
                                       <td bgcolor="#FFFFFF" height="20" colspan="2"><a href="policy.htm"><font face="Arial, Helvetica, sans-serif" size="2" color="#000000" style="text-decoration: none"><b>Policies</b></font></a></td>
                                     </tr>
                                     <tr> 
                                       <td width="11" bgcolor="#FFFFFF" height="20">&nbsp;</td>
-                                      <td colspan="2" bgcolor="#FFFFFF" height="20"><font face="Arial, Helvetica, sans-serif" size="-1" color="#999999"><b><img src="http://a1176.g.akamai.net/7/1176/5697/v001/myhosting.com/images/bullet_squaregray.gif" width="14" height="10">myhosting.com</b></font></td>
+                                      <td colspan="2" bgcolor="#FFFFFF" height="20"><font face="Arial, Helvetica, sans-serif" size="-1" color="#999999"><b><img src="http://a1176.g.akamai.net/7/1176/5697/v005/myhosting.com/images/bullet_squaregray.gif" width="14" height="10">myhosting.com</b></font></td>
                                     </tr>
                                     <tr> 
                                       <td width="11" bgcolor="#FFFFFF" height="20">&nbsp;</td>
@@ -183,14 +183,14 @@ function MM_swapImage() { //v3.0
                                     <tr> 
                                       <td width="11" bgcolor="#FFFFFF" height="20">&nbsp;</td>
                                       <td width="11" bgcolor="#FFFFFF" height="20">
-                                        <div align="right"><font face="Arial, Helvetica, sans-serif" size="-1" color="#000000" style="text-decoration: none"><img src="http://a1176.g.akamai.net/7/1176/5697/v001/myhosting.com/images/arrow_orange.gif" width="10" height="10"></font></div>
+                                        <div align="right"><font face="Arial, Helvetica, sans-serif" size="-1" color="#000000" style="text-decoration: none"><img src="http://a1176.g.akamai.net/7/1176/5697/v005/myhosting.com/images/arrow_orange.gif" width="10" height="10"></font></div>
                                       </td>
                                       <td width="133" bgcolor="#FFFFFF" height="20"><font face="Arial, Helvetica, sans-serif" size="-1" color="#FF6600" style="text-decoration: none"><b>Privacy 
                                         Policy</b></font></td>
                                     </tr>
                                     <tr> 
                                       <td width="11" bgcolor="#FFFFFF" height="20">&nbsp;</td>
-                                      <td colspan="2" bgcolor="#FFFFFF" height="20"><font face="Arial, Helvetica, sans-serif" size="-1"><b><font color="#FF6600"><img src="http://a1176.g.akamai.net/7/1176/5697/v001/myhosting.com/images/bullet_squaregray.gif" width="14" height="10" border="0"></font></b></font><font face="Arial, Helvetica, sans-serif" size="-1" color="#999999" style="text-decoration: none"><b>Registrars</b></font></td>
+                                      <td colspan="2" bgcolor="#FFFFFF" height="20"><font face="Arial, Helvetica, sans-serif" size="-1"><b><font color="#FF6600"><img src="http://a1176.g.akamai.net/7/1176/5697/v005/myhosting.com/images/bullet_squaregray.gif" width="14" height="10" border="0"></font></b></font><font face="Arial, Helvetica, sans-serif" size="-1" color="#999999" style="text-decoration: none"><b>Registrars</b></font></td>
                                     </tr>
                                     <tr> 
                                       <td width="11" bgcolor="#FFFFFF" height="20">&nbsp;</td>
@@ -213,12 +213,12 @@ function MM_swapImage() { //v3.0
                               </td>
                             </tr>
                             <tr> 
-                              <td height="30" background="http://a1176.g.akamai.net/7/1176/5697/v001/myhosting.com/images/bg_leftmenu.gif"> 
+                              <td height="30" background="http://a1176.g.akamai.net/7/1176/5697/v005/myhosting.com/images/bg_leftmenu.gif"> 
                                 <div align="center">&nbsp;</div>
                               </td>
                             </tr>
                             <tr> 
-                              <td height="30"> <img src="http://a1176.g.akamai.net/7/1176/5697/v001/myhosting.com/images/bg_bottomleft.gif" width="188" height="30"> 
+                              <td height="30"> <img src="http://a1176.g.akamai.net/7/1176/5697/v005/myhosting.com/images/bg_bottomleft.gif" width="188" height="30"> 
                               </td>
                             </tr>
                           </tbody></table>
@@ -232,11 +232,11 @@ function MM_swapImage() { //v3.0
                             <div align="right"> <!-- #BeginEditable "ContentArea" --> 
                               <table width="540" border="0" cellspacing="0" cellpadding="0">
                                 <tbody><tr> 
-                                  <td><img src="http://a1176.g.akamai.net/7/1176/5697/v001/myhosting.com/images/title_about.gif" width="540" height="28"></td>
+                                  <td><img src="http://a1176.g.akamai.net/7/1176/5697/v005/myhosting.com/images/title_about.gif" width="540" height="28"></td>
                                 </tr>
                                 <tr> 
                                   <td valign="top"> 
-                                    <p><font face="Arial, Helvetica, sans-serif" size="-1" color="#FF6600"><b><img src="http://a1176.g.akamai.net/7/1176/5697/v001/myhosting.com/images/title_privacypolicy.gif" width="299" height="43"><br>
+                                    <p><font face="Arial, Helvetica, sans-serif" size="-1" color="#FF6600"><b><img src="http://a1176.g.akamai.net/7/1176/5697/v005/myhosting.com/images/title_privacypolicy.gif" width="299" height="43"><br>
                                       Version 1.0 - October, 2001 </b></font></p>
                                     <p><font face="Arial, Helvetica, sans-serif" size="-1">This 
                                       Privacy Policy governs all aspects of how 
@@ -335,7 +335,7 @@ function MM_swapImage() { //v3.0
                         </tr>
                         <tr valign="middle"> 
                           <td height="60" width="552"> 
-                            <div align="center"><img src="http://a1176.g.akamai.net/7/1176/5697/v001/myhosting.com/images/copyright.gif" width="345" height="41" border="0" usemap="#Map" target="_blank" href="http://www.alloterra.net"><br>
+                            <div align="center"><img src="http://a1176.g.akamai.net/7/1176/5697/v005/myhosting.com/images/copyright.gif" width="345" height="41" border="0" usemap="#Map" target="_blank" href="http://www.alloterra.net"><br>
                               <a href="privacypolicy.htm"><font face="Arial, Helvetica, sans-serif" size="1">Privacy 
                               Policy</font></a></div>
                           </td>
