--- a/d/dl/dlt/dltk-kids.com.html
+++ b/d/dl/dlt/dltk-kids.com.html
@@ -1,77 +1,80 @@
-<!--The following is the downloaded HTML source of the dltk-kids.com privacy policy that was archived on 2001-04-09.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20010409222836id_/http%3A//www.dltk-kids.com/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the dltk-kids.com privacy policy that was archived on 2002-06-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020604072518id_/http%3A//www.dltk-kids.com/privacy.htm) for the most accurate reproduction.-->
 
 <html><head>
 <title>Privacy</title>
-<style fprolloverstyle="">A:hover {color: red; font-weight: bold}
-</style>
-
-<meta name="Microsoft Theme" content="copy-of-bubbles 010, default">
+<meta name="Microsoft Theme" content="copy-of-maize 010, default">
+<meta name="Microsoft Border" content="lb">
 </head>
 
-<body bgcolor="#FFFFFF" text="#000000" link="#CC0000" vlink="#000080" alink="#000000"><!--mstheme--><font face="Arial, Arial, Helvetica">
+<body bgcolor="#FFFFFF" text="#000000" link="#0000FF" vlink="#000080" alink="#3366CC"><!--msnavigation--><table dir="ltr" border="0" cellpadding="0" cellspacing="0" width="100%"><tbody><tr><td valign="top" width="1%"><!--mstheme--><font face="Arial, Helvetica"><script language="JavaScript" src="http://www.dltk-kids.com/miniindex.js"></script>
+<!--mstheme--></font></td><td valign="top" width="24"></td><!--msnavigation--><td valign="top"><!--mstheme--><font face="Arial, Helvetica"><h1><!--mstheme--><font face="Arial Black" color="#33CCFF">Privacy Policy<!--mstheme--></font></h1>
+    <p><font face="Arial">We do not collect any personally identifiable information about you
+    such as name, address, phone number, or e-mail address. However, we do obtain some types
+    of non-personally identifiable information such as the Internet Service Provider people
+    use to connect to the Internet, your browser type, or the type of computer operating
+    system you use (Macintosh or Windows, for example).&nbsp; This helps us to determine what
+    our pages will look like on your browser (in an attempt to make sure the templates and
+    other images are viewable and printable for everyone).&nbsp; Er, just to be clear... this
+    information is not specific -- we know that 30% of the people who visit use such and such
+    a browser and 25% of the people who visit use Windows 95, etc... not that Jane uses
+    Windows Explorer and Jimmy uses a MacIntosh.</font></p>
+    <p><font face="Arial">Your email address is collected if you choose to subscribe to our
+    free newsletter.&nbsp; It is not provided to anyone else (for free or for sale).&nbsp; We
+    simply use the email address to send you weekly notification of new crafts.&nbsp; It's
+    proven to be simpler than a What's New page (and it gives me the opportunity to share
+    tidbits of crafting wisdom with you)!<br>
+    <br>
+    In some cases, you may voluntarily provide personal information in response to a specific
+    request or email conversation (example, your name as a signature on an email).&nbsp; This
+    is completely your choice and is not a requirement in corresponding with us.&nbsp; Again,
+    if you do choose to share this info,&nbsp; we do not sell or give this information to
+    anyone.
+    </font>
+</p>
 
-<!--mstheme--></font><table cellpadding="4">
-  <tbody><tr>
-    <script language="JavaScript" src="http://www.dltk-kids.com/miniindex.js"></script>
-    <td valign="top"><!--mstheme--><font face="Arial, Arial, Helvetica">
-<h1><!--mstheme--><font face="Trebuchet MS, Arial, Helvetica"><font color="#CC0000">
-Privacy Policy</font><!--mstheme--></font></h1>
-  <p>
-  <font face="Arial">We do not collect any personally identifiable information about you
-  such as name, address, phone number, or e-mail address. However, we do obtain some types
-  of non-personally identifiable information such as the Internet Service Provider people
-  use to connect to the Internet, your browser type, or the type of computer operating
-  system you use (Macintosh or Windows, for example).&nbsp; This helps us to determine what
-  our pages will look like on your browser (in an attempt to make sure the templates and
-  other images are viewable and printable for everyone).&nbsp; Er, just to be clear... this
-  information is not specific, we know that 30% of the people who visit use such and such a
-  browser and 25% of the people who visit use Windows 95, etc... not that Jane uses Windows
-  Explorer and Jimmy uses a MacIntosh.</font></p>
-  <p><font face="Arial">Your email address is collected if you chose to subscribe to our
-  free newsletter.&nbsp; It is not provided to anyone else (for free or for sale).&nbsp; We
-  simply use the email address to send you weekly notification of new crafts.&nbsp; It's
-  proven to be simpler than a What's New page (and it gives me the opportunity to share
-  tidbits of crafting wisdom with you)!<br>
-  <br>
-  In some cases, you may voluntarily provide personal information in response to a specific
-  request or email conversation (example, your name as a signature on an email).&nbsp; This
-  is completely your choice and is not a requirement in corresponding with us.&nbsp; Again,
-  if you do chose to share this info,&nbsp; we do not sell or give this information to
-  anyone.</font></p>
-  <font size="2"></font><p><font size="2"></font><font face="Arial" size="3">This site, DLTK's Crafts for Kids,
-  uses the services of Engage for the serving and/or targeting of ads, promotions and other
-  marketing messages. To do this, Engage collects anonymous data through the use of cookies.
-  To learn more about Engage, including your ability to opt out of the Engage system, go to
-  http://www.engage.com/privacy.</font><font size="2"></font></p><font size="2">
-  </font>
-    <!--mstheme--></font></td>
-  </tr>
-</tbody></table><!--mstheme--><font face="Arial, Arial, Helvetica">
-  		     </font><div align="center"><font face="Arial, Arial, Helvetica">
-                        </font><center><font face="Arial, Arial, Helvetica">
-                          <!--mstheme--></font><table border="1" cellpadding="2" bgcolor="#FFF0F5" cellspacing="0" width="100%" bordercolordark="#990000" bordercolorlight="#CC0000">
-                            <tbody><tr>
-                              <td align="center" bordercolor="#CC0000" width="17%"><!--mstheme--><font face="Arial, Arial, Helvetica"><b><font size="2"><img src="http://service.bfast.com/bfast/serve?bfmid=7279965&amp;siteid=16620825&amp;bfpage=craftsforkids" nosave="" border="0"><a target="_blank" href="http://www.dltk-kids.com/links.htm?bfmid=7279965&amp;siteid=16620825&amp;bfpage=craftsforkids">Links</a></font></b><!--mstheme--></font></td>
-                              <td align="center" bordercolor="#CC0000" width="17%"><!--mstheme--><font face="Arial, Arial, Helvetica"><a href="http://www.dltk-kids.com"><b><font size="2">Main</font></b></a><!--mstheme--></font></td>
-                              <td align="center" bordercolor="#CC0000" width="17%"><!--mstheme--><font face="Arial, Arial, Helvetica"><a href="http://www.dltk-kids.com/search.html"><b><font size="2">Search</font></b></a><!--mstheme--></font></td>
-                              <td align="center" bordercolor="#CC0000" width="17%"><!--mstheme--><font face="Arial, Arial, Helvetica"><a href="http://www.dltk-kids.com/ecard.html"><b><font size="2">E-Cards</font></b></a><!--mstheme--></font></td>
-                              <td align="center" bordercolor="#CC0000" width="17%"><!--mstheme--><font face="Arial, Arial, Helvetica"><a href="http://www.dltk-kids.com/puzzle.htm"><b><font size="2">Jigsaw_Puzzles</font></b></a><!--mstheme--></font></td>
-                              <td align="center" bordercolor="#CC0000" width="17%"><!--mstheme--><font face="Arial, Arial, Helvetica"><b><a href="http://www.dltk-kids.com/newsletter.htm"><font size="2">Newsletter</font></a></b><!--mstheme--></font></td>
-                            </tr>
-                          </tbody></table><!--mstheme--><font face="Arial, Arial, Helvetica">
 
-                        </font></center><font face="Arial, Arial, Helvetica">
-                      </font></div><font face="Arial, Arial, Helvetica">
+<p>There are a few features on our site that we have offered in conjunction with
+a third party because we do not have the expertise to create these
+ourselves.&nbsp; Because they are provided by third parties we do not control
+the technical backbone so you may wish to refer to the privacy policy of these
+third parties to be sure you are comfortable with the way they may handle the
+information you are providing.&nbsp; Here are some links:
+</p>
 
-<p align="center"><font size="3">[<a href="http://www.dltk-kids.com/feedback.htm">Feedback</a>]&nbsp;&nbsp;&nbsp;&nbsp;
-[<a href="http://www.coloring.ws/printhelp.htm" target="_blank">Print Help</a>]&nbsp;&nbsp;&nbsp;&nbsp;
-[<a href="http://www.dltk-kids.com/privacy.htm">Privacy Policy</a>]</font></p>
 
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<!--msthemeseparator--><p align="center"><img src="_themes/copy-of-bubbles/rule.gif" width="630" height="6"></p>
+</font><div align="left"><font face="Arial, Helvetica">
+  <!--mstheme--></font><table border="0" cellpadding="3" cellspacing="0">
+    <tbody><tr>
+      <td><!--mstheme--><font face="Arial, Helvetica"><a href="http://www.dltk-kids.com/ecard.html"><font size="2">E-cards</font></a><!--mstheme--></font></td>
+      <td><!--mstheme--><font face="Arial, Helvetica"><a href="http://123greetings.com/"><font size="2">123greetings.com</font></a><!--mstheme--></font></td>
+      <td><!--mstheme--><font face="Arial, Helvetica"><a href="http://123greetings.com/privacy_policy/"><font size="2">123greetings.com
+        Privacy Policy</font></a><!--mstheme--></font></td>
+    </tr>
+    <tr>
+      <td><!--mstheme--><font face="Arial, Helvetica"><a href="http://www.dltk-kids.com/puzzle.htm"><font size="2">Java
+        Jigsaw Puzzles</font></a><!--mstheme--></font></td>
+      <td><!--mstheme--><font face="Arial, Helvetica"><a href="http://www.jigzone.com/"><font size="2">Jigzone.com</font></a><!--mstheme--></font></td>
+      <td><!--mstheme--><font face="Arial, Helvetica"><a href="http://www.jigzone.com/indexpage/privacy.htm"><font size="2">Jigzone.com
+        Privacy Policy</font></a><!--mstheme--></font></td>
+    </tr>
+    <tr>
+      <td><!--mstheme--><font face="Arial, Helvetica"><a href="http://www.dltk-kids.com/puzzle.htm"><font size="2">Shockwave
+        Jigsaw Puzzles</font></a><!--mstheme--></font></td>
+      <td><!--mstheme--><font face="Arial, Helvetica"><a href="http://www.shockwave.com/sw/content/puzzlemaker"><font size="2">Shockwave.com</font></a><!--mstheme--></font></td>
+      <td><!--mstheme--><font face="Arial, Helvetica"><a href="http://www.atomshockwave.com/asw_fineprint_privacy.htm"><font size="2">Shockwave.com
+        Privacy Policy</font></a><!--mstheme--></font></td>
+    </tr>
+  </tbody></table><!--mstheme--><font face="Arial, Helvetica">
+</font></div><font face="Arial, Helvetica">
+<p><font face="Arial">In some cases, you may be able to use these third party
+features without providing any personal information.<br>
+    </font><br>
+</p>
 
-<!--mstheme--></font>
+
+<!--msthemeseparator--><p align="center"><img src="_themes/copy-of-maize/amaizrul.gif" width="600" height="10"></p>
+<!--mstheme--></font><!--msnavigation--></td></tr><!--msnavigation--></tbody></table><!--msnavigation--><table border="0" cellpadding="0" cellspacing="0" width="100%"><tbody><tr><td><!--mstheme--><font face="Arial, Helvetica"><script language="JavaScript" src="http://www.dltk-kids.com/js_bottom.js"></script>
+<!--mstheme--></font></td></tr><!--msnavigation--></tbody></table>
 
 </body></html>
