--- a/h/ha/hai/hairdirect.com.html
+++ b/h/ha/hai/hairdirect.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the hairdirect.com privacy policy that was archived on 2001-10-20.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011020014654id_/http%3A//hairdirect.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the hairdirect.com privacy policy that was archived on 2002-06-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020604074208id_/http%3A//www.hairdirect.com/privacy.html) for the most accurate reproduction.-->
 
 <html><head>
 <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
