--- a/s/st/sta/stats.com.html
+++ b/s/st/sta/stats.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the stats.com privacy policy that was archived on 2001-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011216194426id_/http%3A//www.stats.com/default.asp%3Fpage%3Dprivacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the stats.com privacy policy that was archived on 2002-06-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020604074536id_/http%3A//www.stats.com/default.asp%3Fpage%3Dprivacy) for the most accurate reproduction.-->
 
 <html><head>
 <title>STATS, Inc.</title>
@@ -15,7 +15,9 @@
 
 
 
+
 	<title>Untitled</title>
+	<meta http-equiv="expires" content="0">
 
 
 
@@ -101,7 +103,7 @@ isimages.Newlook231_ov.src = "/images/newlook2other_sportsov.gif";
         <tr>
           <td colspan="8" height="60" width="458"><img alt="" border="0" height="60" name="Newlook215" src="/images/newlook2pane1_3_.gif" usemap="#Newlook216" width="458"><map name="Newlook216"><area coords="125,37,299,60" href="/index.asp&#10;" shape="RECT"><area coords="22,0,142,60" href="/index.asp&#10;" shape="RECT"></map></td>
 
-          <td colspan="4" height="60" width="234"><a href="/ad_redirect.asp?url=http://biz.stats.com&amp;image=/images/biz_banner21.gif" target="target=_new"><img src="/images/biz_banner21.gif" alt="STATS, Inc. Business to Business Solutions" width="234" height="60" border="0"></a></td>
+          <td colspan="4" height="60" width="234"><a href="/ad_redirect.asp?url=http://biz.stats.com&amp;image=/images/b2b5.gif" target="target=_new"><img src="/images/b2b5.gif" alt="STATS, Inc. Business to Business Solutions" width="234" height="60" border="0"></a></td>
           <td height="60" width="8"><img alt="" border="0" height="60" name="Newlook218" src="/images/newlook2pane13_3_.gif" width="8"></td></tr>
         <tr>
           <td colspan="13" height="23" width="700"><img alt="" border="0" height="23" name="Newlook219" src="/images/newlook2pane1_4_.gif" usemap="#Newlook220" width="700"><map name="Newlook220"><area coords="125,0,299,10" href="/index.asp&#10;" shape="RECT"><area coords="22,0,142,23" href="/index.asp&#10;" shape="RECT"></map></td></tr>
@@ -254,14 +256,13 @@ We expect the downtime to last from 7 AM CT to 12 PM CT on Friday, September 14.
 <b><font face="verdana"><font color="#800000"><font size="-2">&nbsp;&nbsp;FANTASY SPORTS</font></font></font></b>
 <br><select name="page" size="1" style="FONT-SIZE: 7pt; COLOR: rgb(53,53,53); FONT-FAMILY: Arial; BACKGROUND-COLOR: rgb(224,224,224)" onchange="MM_jumpMenu('parent',this,0)">
 <option value="">Pick One&nbsp;
-	</option><option value="../bkpick/intro.asp">Pro Hoops Pick 'Em
-	</option><option value="http://www.diamondlegends.com">Diamond Legends
-	</option><option value="http://209.116.117.34">Classic Baseball
-	</option><option value="http://www.stats.com/sfafb_new.asp">SFA - Football
-	</option><option value="http://fantasy.stats.com/sff/live/2001promo.asp">STATS Fantasy FB
-	</option><option value="http://fn.foxsports.com/bjfb/bjfb_promo.asp">Fantasy Baseball
+	</option><option value="http://fantasy.stats.com/sfbb/sfbb_promo.asp">Fantasy Baseball
 	</option><option value="../sfabb_new.asp">SFA - Baseball
-	<!--<option value="sffredirect">Fantasy Football-->
+	</option><option value="http://www.stats.com/store/index.asp?page=BD01">Fantasy Manager
+	<!--<option value="../bkpick/intro.asp">Pro BK Pick 'Em-->
+	</option><option value="http://www.diamondlegends.com">Diamond Legends
+	</option><option value="http://www.stats.com/sfafb_new.asp">SFA - Football
+	</option><option value="http://fantasy.stats.com/sff/live/2001promo.asp">Fantasy Football
 </option></select></form></td>
 </tr> 
 
@@ -276,16 +277,15 @@ We expect the downtime to last from 7 AM CT to 12 PM CT on Friday, September 14.
 	</option><option value="/store/store.asp">What's Hot
 	</option><option value="/store/store.asp?page=bh02">Pro Bsktbl Hndbk
 	</option><option value="/store/store.asp?page=hh02">Hockey Handbook
-	</option><option value="/store/store.asp?page=fh01">Pro FB Hndbk
-	</option><option value="/store/store.asp?page=pf01">Pro FB Srcbk
-	</option><option value="/store/store.asp?page=FBFdiskpage">Fantasy FB Rprts
+	<!--<option value="/store/store.asp?page=fh02">Pro FB Hndbk
+	<option value="/store/store.asp?page=pf02">Pro FB Srcbk
+	<option value="/store/store.asp?page=FBFdiskpage">Fantasy FB Rprts-->
 	</option><option value="/store/store.asp?page=pjupandpjud02">Projection Update
 	</option><option value="/store/store.asp?page=hb02">Major Lg Hndbk
 	</option><option value="/store/store.asp?page=mh02">Minor Lg Hndbk
 	</option><option value="/store/store.asp?page=pp02">Player Profiles
 	</option><option value="/store/store.asp?page=sn02">Sctng Ntbk
 	</option><option value="/store/store.asp?page=mn02">Mn Lg Sct Ntbk
-	</option><option value="/store/store.asp?page=sb02">Bsbll Scoreboard
 	</option><option value="/store/store.asp?page=athb">All-Tm Mjr Hndbk
 	</option><option value="/store/store.asp?page=atsb">All-Tm BB Srcbk
 	</option><option value="/store/store.asp?page=bsdd">Ballpark Srcbk
@@ -428,7 +428,7 @@ If you have any concerns or questions about the STATS Privacy Policy please feel
 <tr>
 <td align="middle" bgcolor="#000088">
 <center>
-<font face="verdana" size="-2" color="white"><a href="/default.asp?page=copyright"><font color="white">Copyright</font></a> © 2001 STATS, Inc. All rights reserved.  -  <a href="/default.asp?page=privacy"><font color="white">Privacy Policy</font></a><font color="white">.</font>
+<font face="verdana" size="-2" color="white"><a href="/default.asp?page=copyright"><font color="white">Copyright</font></a> © 2002 STATS, Inc. All rights reserved.  -  <a href="/default.asp?page=privacy"><font color="white">Privacy Policy</font></a><font color="white">.</font>
 <br>Use of this site signifies your agreement to the <a href="/default.asp?page=terms"><font color="white">Terms &amp; Conditions</font></a> of Use. </font>
 </center>
 <p>
